# gag27062026

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  HOW_IT_WORKS.md  HOW_IT_WORKS_KIDS.md  README.md  SUMMARY.md  TECH_STACK.md  download_dem.py  main.py  pyproject.toml
data/checkpoint_examples/: README.md
data/checkpoint_examples/01_kamchatka_pixel/: altitudes.txt  params.txt
data/checkpoint_examples/02_kamchatka_pixel_noisy/: altitudes.txt  params.txt
data/checkpoint_examples/03_caucasus_geo/: altitudes.txt  params.txt
data/checkpoint_examples/03_dramatic_kamchatka_pixel/: altitudes.txt  params.txt
data/dem/: altai.tif  caucasus.tif  crimea.tif  dramatic_kamchatka.tif  karelia.tif  primorye.tif  sakhalin.tif  siberia.tif  synthetic_kamchatka.tif  ural.tif
docs/demo/: index.html
gagarin/: buffer.py  checkpoint.py  cli.py  config.py  constants.py  correlator.py  data_generator.py  dem_loader.py  eskf.py  estimator.py  geo_utils.py  landing.py  nmea_parser.py  pipeline.py  preprocess.py  profile.py  quality.py  recovery.py  replanning.py  viz.py
gagarin/viz/: __init__.py  components.py  dashboard.py  data_model.py  heatmap.py  mission.py  profiles.py  template.py  trajectory.py  utils.py
simulation_ui/: analyzer.py  main.py  runner.py  svg_generator.py  texts.py
simulation_ui/static/: app.js  checkpoint.js  style.css
simulation_ui/templates/: checkpoint.html  index.html
tests/: test_checkpoint_mad.py  test_config.py  test_correlator.py  test_eskf.py  test_estimator.py  test_geo_utils.py  test_nmea_parser.py  test_runner.py
(+14 files in other folders)
