[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gagarin"]

[project]
name = "gagarin-tercom"
version = "0.1.0"
description = "Terrain Contour Matching (TERCOM) navigation for GNSS-denied UAV operations"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.22,<2.5",
    "scipy>=1.15",
    "rioxarray>=0.22",
    "xarray>=2025",
    "plotly>=6.0",
    "pynmea2>=1.19",
    "pyproj>=3.7",
    "click>=8.1",
    "requests>=2.32",
    "python-multipart>=0.0.32",
]

[project.scripts]
gagarin = "gagarin.cli:cli"

[project.optional-dependencies]
rpi = ["xarray-spatial"]
dev = ["pytest>=8.0", "pytest-benchmark>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
